<?xml version="1.0" encoding="utf-8"?><!--
快速注册和找回密码公用
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRegistBackgroud"

    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/main_padding">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/info_reset_password"
            android:textColor="@android:color/black"
            android:textSize="@dimen/tips_font" />


        <EditText
            android:id="@+id/yanzhengma_editview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/regist_input_height"
            android:background="@android:color/white"
            android:hint="@string/info_hint_password"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/main_font" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/info_tips_password"
            android:textSize="@dimen/tips_font" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/regist_button_height"
            android:layout_marginTop="40dp"
            android:text="@string/action_finish" />

        <TextView
            android:id="@+id/hotlint_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="遇到问题了?请联系客服"
            android:textSize="@dimen/tips_font" />
    </LinearLayout>
</LinearLayout>