<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    tools:context="isechome.comisechomewww.activity.LoginActivity">

    <include layout="@layout/toolbar" />


    <LinearLayout
        android:id="@+id/loginview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_user"
                android:textColor="@android:color/black"
                android:textSize="@dimen/main_font" />

            <AutoCompleteTextView
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/prompt_user_tips"
                android:maxLines="1"
                android:singleLine="true"
                android:text="sdadidhsjfhsjfjshfjshfjsdhfjhsjfkhjkfhkjfhskjfhkjhfdsakjfsadsdsafsasdfsdfh"
                android:textSize="@dimen/main_font" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_cancel_black_18px" />
        </LinearLayout>

        <include layout="@layout/view_line"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_password"
                android:textColor="@android:color/black"
                android:textSize="@dimen/main_font" />

            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/prompt_password_tips"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="@dimen/main_font" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@drawable/ic_visibility_off_black_18px" />

        </LinearLayout>

        <include layout="@layout/view_line"></include>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/regist_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/sign_in_button"
                android:layout_below="@id/sign_in_button"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:text="@string/action_regist" />

            <TextView
                android:id="@+id/re_password_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/sign_in_button"
                android:layout_alignRight="@id/sign_in_button"
                android:layout_below="@id/sign_in_button"
                android:layout_marginTop="5dp"
                android:text="@string/action_re_password" />
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/aboutsoft_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="5dp"
            android:drawableLeft="@drawable/ic_action_ic_phone_android_black_24px"
            android:gravity="center"
            android:text="关于手机" />


    </LinearLayout>
</LinearLayout>
