<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRegistBackgroud"

    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="@dimen/main_padding">

        <TextView
            android:id="@+id/userinfo_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/info_userphone"
            android:textColor="@android:color/holo_red_light"
            android:textSize="@dimen/tips_font" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/regist_input_height"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/yanzhengma_editview"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@android:color/white"
                android:hint="请输入验证码"
                android:paddingLeft="5dp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/main_font" />


            <Button
                android:id="@+id/yanzhengma_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:text="@string/info_yanzhengma" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/regist_button_height"
            android:layout_marginTop="40dp"

            android:text="@string/action_finish" />

        <TextView
            android:id="@+id/hotlint_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="遇到问题了?请联系客服"
            android:textSize="@dimen/tips_font" />
    </LinearLayout>
</LinearLayout>